force-app/main/default/objects/Vendor_Detail__c/Vendor_Detail__c.object-meta.xml
<CustomObject>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>