force-app/main/default/objects/Vendor_Detail__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Will be fed over from EVO</description>
    <label>Active</label>
    <length>120</length>
    <type>Text</type>
</CustomField>