force-app/main/default/objects/Vendor_Detail__c/fields/AIQ_VendorId__c.field-meta.xml
<CustomField>
    <fullName>AIQ_VendorId__c</fullName>
    <externalId>true</externalId>
    <label>Vendor ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>