force-app/main/default/objects/Vendor_Detail__c/fields/See_Vendors_Open_Opps_by_SM_SD__c.field-meta.xml
<CustomField>
    <fullName>See_Vendors_Open_Opps_by_SM_SD__c</fullName>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;/lightning/r/Report/00O70000002wiQC/view?fv0=&quot;, 

/* Otherwise use Classic syntax */ 
&quot;/00O70000002wiQC?pv0=&quot;) 

/* Append the Vendor Name */ 
&amp; Name, 

/* Specify the link text */ 
&quot;Vendors Open Opps by SM/SD&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendors Open Opps by SM/SD</label>
    <type>Text</type>
</CustomField>