force-app/main/default/objects/Vendor_Detail__c/fields/Vendor_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Client_Number__c</fullName>
    <label>Vendor Client Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>