force-app/main/default/objects/Vendor_Detail__c/fields/Vendor_s_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Vendor_s_Open_Opportunities__c</fullName>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;/lightning/r/Report/00O70000002wcTF/view?fv0=&quot;, 

/* Otherwise use Classic syntax */ 
&quot;/00O70000002wcTF?pv0=&quot;) 

/* Append the Vendor Name */ 
&amp; Name, 

/* Specify the link text */ 
&quot;Vendor&apos;s Open Opportunities&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendors Open Opportunities</label>
    <type>Text</type>
</CustomField>