force-app/main/default/objects/Vendor_Detail__c/fields/Vendor_s_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Vendor_s_Won_Opportunities__c</fullName>
    <formula>HYPERLINK( 

/* If they&apos;re in Lightning */ 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, 

/* Use Lightning syntax, optimized to avoid full page reload */ 
&quot;/lightning/r/Report/00O70000002wePZ/view?fv0=&quot;, 

/* Otherwise use Classic syntax */ 
&quot;/00O70000002wePZ?pv0=&quot;) 

/* Append the Vendor Name */ 
&amp; Name, 

/* Specify the link text */ 
&quot;Vendor&apos;s Won Opportunities&quot;, 

/* Keep it in the same browser tab to avoid full page reload */ 
&quot;_self&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendors Won Opportunities</label>
    <type>Text</type>
</CustomField>