force-app/main/default/objects/Vendor_Detail__c/fields/X18_digit_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_Vendor_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 digit Vendor ID</label>
    <type>Text</type>
</CustomField>