force-app/main/default/objects/Vendor_Detail__c/listViews/AAC_Vendors.listView-meta.xml
<ListView>
    <fullName>AAC_Vendors</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Code__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor_Code__c</field>
        <operation>startsWith</operation>
        <value>AAC</value>
    </filters>
    <label>AAC Vendors</label>
</ListView>