force-app/main/default/objects/Vendor_Detail__c/listViews/EVO_Vendor_list.listView-meta.xml
<ListView>
    <fullName>EVO_Vendor_list</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Code__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>contains</operation>
        <value>EVO Integration</value>
    </filters>
    <label>EVO Vendor list</label>
</ListView>